done - facut refactor --> le iau static acum
