# project/Services/FrontendService/routes/mainPageRoutes.js
@@ -15,103 +15,7 @@ const routerController = new RouterController([new Router("GET", "/luca-app/fron
         res.write(data);
         res.end();
     });
-}),
-    new Router("GET", "/luca-app/front/styles/home.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/home.css');
-    fs.readFile(filePath, (err, data) => {
-        if (err) {
-            res.writeHead(404, {'Content-Type': 'text/css'});
-            return res.end('404 Not Found');
-        }
-        res.writeHead(200, {'Content-Type': 'text/css'});
-        res.write(data);
-        res.end();
-    });
-}),
-    new Router("GET", "/luca-app/front/styles/favourites.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/favourites.css');
-        fs.readFile(filePath, (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/front/styles/about.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/about.css');
-        fs.readFile(filePath, (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/front/styles/help.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/help.css');
-        fs.readFile(filePath, (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/front/styles/index.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/index.css');
-        fs.readFile(filePath, (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/front/styles/news.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/news.css');
-        fs.readFile(filePath, (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/front/styles/actor-profile.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/actor-profile.css');
-        fs.readFile(filePath, (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/front/styles/admin.css", async (req, res) => {
-        const filePath = path.join(dirPath, 'styles/admin.css');
-        fs.readFile(filePath, (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    })
+})
 ]);
 
 routerController.addRoute(
