# project/Services/MainPages/routes/internalRoutes.js
@@ -847,95 +847,95 @@ const internalRoutes = [
             res.end("Internal Error");
         }
 
-    })
-    , new Router("GET", "/luca-app/main/styles/home.css", async (req, res) => {
-        fs.readFile("Frontend/styles/home.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
     }),
-    new Router("GET", "/luca-app/main/styles/favourites.css", async (req, res) => {
-        fs.readFile("Frontend/styles/favourites.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/main/styles/about.css", async (req, res) => {
-        fs.readFile("Frontend/styles/about.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/main/styles/help.css", async (req, res) => {
-        fs.readFile("Frontend/styles/help.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/main/styles/index.css", async (req, res) => {
-        fs.readFile("Frontend/styles/index.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/main/styles/news.css", async (req, res) => {
-        fs.readFile("Frontend/styles/news.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/main/styles/actor-profile.css", async (req, res) => {
-        fs.readFile("Frontend/styles/actor-profile.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
-    new Router("GET", "/luca-app/main/styles/admin.css", async (req, res) => {
-        fs.readFile("Frontend/styles/admin.css", (err, data) => {
-            if (err) {
-                res.writeHead(404, {'Content-Type': 'text/css'});
-                return res.end('404 Not Found');
-            }
-            res.writeHead(200, {'Content-Type': 'text/css'});
-            res.write(data);
-            res.end();
-        });
-    }),
+    // , new Router("GET", "/luca-app/main/styles/home.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/home.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
+    // new Router("GET", "/luca-app/main/styles/favourites.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/favourites.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
+    // new Router("GET", "/luca-app/main/styles/about.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/about.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
+    // new Router("GET", "/luca-app/main/styles/help.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/help.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
+    // new Router("GET", "/luca-app/main/styles/index.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/index.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
+    // new Router("GET", "/luca-app/main/styles/news.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/news.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
+    // new Router("GET", "/luca-app/main/styles/actor-profile.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/actor-profile.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
+    // new Router("GET", "/luca-app/main/styles/admin.css", async (req, res) => {
+    //     fs.readFile("Frontend/styles/admin.css", (err, data) => {
+    //         if (err) {
+    //             res.writeHead(404, {'Content-Type': 'text/css'});
+    //             return res.end('404 Not Found');
+    //         }
+    //         res.writeHead(200, {'Content-Type': 'text/css'});
+    //         res.write(data);
+    //         res.end();
+    //     });
+    // }),
 
 
     new Router("POST","/luca-app/main/add-favorites",async (req,res)=>{
