# project/Services/apiGateway/finalSwagger.yaml
@@ -362,142 +362,6 @@ paths:
             schema:
               type: object
               properties: {}
-  /luca-app/main/styles/home.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/home.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/main/styles/favourites.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/favourites.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/main/styles/about.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/about.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/main/styles/help.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/help.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/main/styles/index.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/index.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/main/styles/news.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/news.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/main/styles/actor-profile.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/actor-profile.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/main/styles/admin.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/main/styles/admin.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
   /luca-app/main/add-favorites:
     post:
       tags:
@@ -1180,142 +1044,6 @@ paths:
           description: Internal Server Error
       parameters: []
       requestBody: {}
-  /luca-app/front/styles/home.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/home.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/favourites.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/favourites.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/about.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/about.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/help.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/help.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/index.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/index.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/news.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/news.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/actor-profile.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/actor-profile.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/admin.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/admin.css
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
   /luca-app/front/home:
     get:
       tags:
@@ -1469,23 +1197,6 @@ paths:
       tags:
         - API
       summary: GET /luca-app/front/help
-      description: ''
-      responses:
-        '200':
-          description: Successful response
-        '400':
-          description: Bad Request
-        '404':
-          description: Not Found
-        '500':
-          description: Internal Server Error
-      parameters: []
-      requestBody: {}
-  /luca-app/front/styles/authentification.css:
-    get:
-      tags:
-        - API
-      summary: GET /luca-app/front/styles/authentification.css
       description: ''
       responses:
         '200':
